--- a/deploy/crd.yaml
+++ b/deploy/crd.yaml
@@ -1,4 +1,4 @@
-apiVersion: apiextensions.k8s.io/v1beta1
+apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: flinkapplications.flink.k8s.io
@@ -12,7 +12,6 @@ spec:
     shortNames:
       - flinkapp
   scope: Namespaced
-  version: v1beta1
   versions:
     - name: v1beta1
       served: true
